<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kuka_kr300_support</name>
  <version>0.2.0</version>
  <description>
    <p>
      ROS-Industrial support for the KUKA KR 300 R2500 ultra.
    </p>
    <p>
      This package contains configuration data, 3D models and launch files
      for KUKA KR 300 R2500 ultra manipulators.
    </p>
    <p><b>Specifications</b>:</p>
    <ul>
      <li>KUKA KR 300 R2500 ultra</li>
    </ul>
    <p>
      Joint limits and maximum joint velocities hasn't been validated.
    </p>
    <p>
      Before using any of the configuration files and / or meshes included
      in this package, be sure to check they are correct for the particular
      robot model and configuration you intend to use them with.
    </p>
  </description>

  <author>Chia-Ching Yen</author>
  <maintainer email="ccyen@umich.edu">Chia-Ching Yen</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
